Fix the CDC medium image covers
- Use the right colours
- Remove the HHS logo since the new CDC logo has both
- Make the image stretch across the page
- Allow for logo variant depending on theme colour

Also bumped to 1.4.0 so that's in the changelog.

--- a/bloom_nofos/bloom_nofos/static/theme-opdiv-cdc-blue.css
+++ b/bloom_nofos/bloom_nofos/static/theme-opdiv-cdc-blue.css
@@ -57,7 +57,11 @@ h1 {
 }
 
 .nofo--cover-page--footer {
-  background: var(--color--white);
+  background: var(--color--vibrant-blue);
+}
+
+.nofo--cover-page--footer .nofo--cover-page--footer--image {
+  width: 100%;
 }
 
 /* Cover page: hero image */
