--- a/bloom_nofos/bloom_nofos/static/theme-opdiv-cdc-white.css
+++ b/bloom_nofos/bloom_nofos/static/theme-opdiv-cdc-white.css
@@ -2,24 +2,30 @@
 
 /* Headings */
 
-h1 {
-  color: var(--color--dark-blue);
-}
-
 /* Cover page */
 
-.nofo--cover-page--header--logo--subheading,
+.nofo--cover-page--header {
+  background-color: var(--color--pale-blue);
+}
+
 .nofo--cover-page--title {
-  color: var(--color--dark-blue);
+  padding-top: 5mm;
 }
 
-.nofo--cover-page--footer .nofo--cover-page--footer--logo img {
-  filter: invert(22%) sepia(51%) saturate(3181%) hue-rotate(191deg)
-    brightness(98%) contrast(99%);
-}
-
+.nofo--cover-page--title,
 .nofo--cover-page--footer {
-  background: var(--color--pale-blue);
+  background-color: var(--color--white);
+}
+
+.nofo--cover-page--header--logo--subheading,
+.nofo--cover-page--header--intro,
+.nofo--cover-page--title h1,
+.nofo--cover-page--title .nofo--cover-page--title--subheading {
+  color: var(--color--vibrant-blue);
+}
+
+.nofo--cover-page--footer .nofo--cover-page--footer--image {
+  width: 100%;
 }
 
 /* Cover page: hero image */
