--- a/bloom_nofos/bloom_nofos/static/theme-orientation-portrait.css
+++ b/bloom_nofos/bloom_nofos/static/theme-orientation-portrait.css
@@ -24,8 +24,7 @@
 }
 
 .nofo--cover-page--header {
-  padding: 20mm;
-  padding-bottom: 15mm;
+  padding: 15mm 20mm;
 }
 
 .nofo--cover-page--title {
